examples/tests/SkipConstructor/midamble.v
Fail Check field. (* Confirm that the record field selector `field` wasn't generated *)
